# openenv-campus-env

./: Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
app/: env.py  grader.py  models.py  tasks.py
server/: app.py
