[project]
name = "openenv-campus"
version = "0.1.0"
description = "OpenEnv Campus Scheduling Environment"
authors = [{ name = "Prasanna" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
